--- a/configuration.org
+++ b/configuration.org
@@ -28,9 +28,9 @@ eval-buffer=.
 #+BEGIN_SRC emacs-lisp
   (require 'package)
 
-  (setq package-archives '(("gnu" . "https://elpa.gnu.org/packages/")
-                           ("marmalade" . "https://marmalade-repo.org/packages/")
-                           ("melpa" . "https://melpa.org/packages/")))
+  (setq package-archives '(
+                           ("melpa" . "https://melpa.org/packages/")
+                           ("marmalade" . "https://marmalade-repo.org/packages/")))
 #+END_SRC
 
 ** Define packages that are to be installed
@@ -56,7 +56,8 @@ down in this file, some are used with the default configuration.
                       web-mode
                       yasnippet
                       which-key
-                      prettier))
+                      prettier
+                      rust-mode))
 #+END_SRC
 
 ** Install packages
@@ -378,6 +379,14 @@ web-mode.el is an autonomous major-mode for editing web templates.
 
   (setq web-mode-markup-indent-offset 4)
 #+END_SRC
+** yaml-mode
+
+#+BEGIN_SRC emacs-lisp
+  (require 'yaml-mode)
+
+  (add-to-list 'auto-mode-alist '("\\.yml\\'" . yaml-mode))
+  (add-to-list 'auto-mode-alist '("\\.yaml\\'" . yaml-mode))
+#+END_SRC
 ** Javascript
 *** General configuration
 #+BEGIN_SRC emacs-lisp
@@ -385,11 +394,26 @@ web-mode.el is an autonomous major-mode for editing web templates.
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
+  (require 'typescript-mode)
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
   (add-to-list 'auto-mode-alist '("\\.js\\'" . js-mode))
+  (add-to-list 'auto-mode-alist '("\\.ts\\'" . typescript-mode))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
   (add-hook 'js-mode-hook 'lsp)
+  (add-hook 'typescript-mode-hook 'lsp)
+#+END_SRC
+*** Require eslint-flymake
+#+BEGIN_SRC emacs-lisp
+  (require 'eslint-flymake)
+#+END_SRC
+*** Set up js-doc
+#+BEGIN_SRC emacs-lisp
+  (require 'js-doc)
+  (define-key global-map (kbd "C-c i") 'js-doc-insert-function-doc)
 #+END_SRC
 ** Ruby
 Use ruby-mode for *.rb
@@ -418,12 +442,20 @@ Enable Projectile globally.
   (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
 #+END_SRC
 
-Register npm project type.
+Register ember project type.
 #+BEGIN_SRC emacs-lisp
   (projectile-register-project-type
    'ember '(".ember-cli")
    :test "npm test"
    :test-suffix "-test")
+#+END_SRC
+
+Register npm project type.
+#+BEGIN_SRC emacs-lisp
+  (projectile-register-project-type
+   'npm '(".package.json")
+   :test "npm test"
+   :test-suffix "Test")
 #+END_SRC
 
 Wrap 'projectile-find-implementation-or-test' to cache looked-up
