--- a/configuration.org
+++ b/configuration.org
@@ -28,7 +28,7 @@ eval-buffer=.
 #+BEGIN_SRC emacs-lisp
   (require 'package)
 
-  (setq package-archives '(
+  (setq package-archives '(("gnu" . "https://elpa.gnu.org/packages/")
                            ("melpa" . "https://melpa.org/packages/")
                            ("marmalade" . "https://marmalade-repo.org/packages/")))
 #+END_SRC
